@@ -2,6 +2,8 @@ package com.rarchives.ripme.ripper.rippers;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -50,7 +52,7 @@ public class ArtStationRipper extends AbstractJSONRipper {
             try {
                 // groupData = Http.url(albumURL.getLocation()).getJSON();
                 groupData = getJson(albumURL.getLocation());
-            } catch (IOException e) {
+            } catch (IOException | URISyntaxException e) {
                 throw new MalformedURLException("Couldn't load JSON from " + albumURL.getLocation());
             }
             return groupData.getString("title");
@@ -60,9 +62,9 @@ public class ArtStationRipper extends AbstractJSONRipper {
             // URL points to user portfolio, use user's full name as GID
             String userInfoURL = "https://www.artstation.com/users/" + albumURL.getID() + "/quick.json";
             try {
-                // groupData = Http.url(userInfoURL).getJSON();
+//                 groupData = Http.url(userInfoURL).getJSON();
                 groupData = getJson(userInfoURL);
-            } catch (IOException e) {
+            } catch (IOException | URISyntaxException e) {
                 throw new MalformedURLException("Couldn't load JSON from " + userInfoURL);
             }
             return groupData.getString("full_name");
@@ -74,7 +76,7 @@ public class ArtStationRipper extends AbstractJSONRipper {
     }
 
     @Override
-    protected JSONObject getFirstPage() throws IOException {
+    protected JSONObject getFirstPage() throws IOException, URISyntaxException {
         if (albumURL.getType() == URL_TYPE.SINGLE_PROJECT) {
             // URL points to JSON of a single project, just return it
             // return Http.url(albumURL.getLocation()).getJSON();
@@ -90,7 +92,7 @@ public class ArtStationRipper extends AbstractJSONRipper {
             if (albumContent.getInt("total_count") > 0) {
                 // Get JSON of the first project and return it
                 JSONObject projectInfo = albumContent.getJSONArray("data").getJSONObject(0);
-                ParsedURL projectURL = parseURL(new URL(projectInfo.getString("permalink")));
+                ParsedURL projectURL = parseURL(new URI(projectInfo.getString("permalink")).toURL());
                 // return Http.url(projectURL.getLocation()).getJSON();
                 return getJson(projectURL.getLocation());
             }
@@ -100,7 +102,7 @@ public class ArtStationRipper extends AbstractJSONRipper {
     }
 
     @Override
-    protected JSONObject getNextPage(JSONObject doc) throws IOException {
+    protected JSONObject getNextPage(JSONObject doc) throws IOException, URISyntaxException {
         if (albumURL.getType() == URL_TYPE.USER_PORTFOLIO) {
             // Initialize the page number if it hasn't been initialized already
             if (projectPageNumber == null) {
@@ -117,7 +119,7 @@ public class ArtStationRipper extends AbstractJSONRipper {
                 projectIndex = 0;
             }
 
-            Integer currentProject = ((projectPageNumber - 1) * 50) + (projectIndex + 1);
+            int currentProject = ((projectPageNumber - 1) * 50) + (projectIndex + 1);
             // JSONObject albumContent = Http.url(albumURL.getLocation() + "?page=" +
             // projectPageNumber).getJSON();
             JSONObject albumContent = getJson(albumURL.getLocation() + "?page=" + projectPageNumber);
@@ -125,7 +127,7 @@ public class ArtStationRipper extends AbstractJSONRipper {
             if (albumContent.getInt("total_count") > currentProject) {
                 // Get JSON of the next project and return it
                 JSONObject projectInfo = albumContent.getJSONArray("data").getJSONObject(projectIndex);
-                ParsedURL projectURL = parseURL(new URL(projectInfo.getString("permalink")));
+                ParsedURL projectURL = parseURL(new URI(projectInfo.getString("permalink")).toURL());
                 projectIndex++;
                 // return Http.url(projectURL.getLocation()).getJSON();
                 return getJson(projectURL.getLocation());
@@ -254,7 +256,7 @@ public class ArtStationRipper extends AbstractJSONRipper {
             con.userAgent("Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:67.0) Gecko/20100101 Firefox/67.0");
             con.header("Accept", "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8");
             con.header("Accept-Language", "en-US,en;q=0.5");
-            con.header("Accept-Encoding", "gzip, deflate, br");
+//            con.header("Accept-Encoding", "gzip, deflate, br");
             con.header("Upgrade-Insecure-Requests", "1");
             Response res = con.execute();
             int status = res.statusCode();
@@ -309,7 +311,7 @@ public class ArtStationRipper extends AbstractJSONRipper {
                 "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
         con.header("Accept", "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8");
         con.header("Accept-Language", "en-US,en;q=0.5");
-        con.header("Accept-Encoding", "gzip, deflate, br");
+//        con.header("Accept-Encoding", "gzip, deflate, br");
         con.header("Upgrade-Insecure-Requests", "1");
         Response res = con.execute();
         int status = res.statusCode();
@@ -320,8 +322,8 @@ public class ArtStationRipper extends AbstractJSONRipper {
         throw new IOException("Error fetching json. Status code:" + status);
     }
 
-    private JSONObject getJson(String url) throws IOException {
-        return getJson(new URL(url));
+    private JSONObject getJson(String url) throws IOException, URISyntaxException {
+        return getJson(new URI(url).toURL());
     }
 
 }
