@@ -10,6 +10,7 @@ import org.jsoup.nodes.Document;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -51,12 +52,6 @@ public class HentaidudeRipper extends AbstractSingleFileRipper {
     }
 
     @Override
-    public Document getFirstPage() throws IOException {
-        // "url" is an instance field of the superclass
-        return Http.url(url).get();
-    }
-
-    @Override
     public List<String> getURLsFromPage(Document doc) {
         List<String> result = new ArrayList<>();
         Matcher m1 = p1.matcher(url.toString());
@@ -84,7 +79,7 @@ public class HentaidudeRipper extends AbstractSingleFileRipper {
         return hentaidudeThreadPool;
     }
 
-    private class HentaidudeDownloadThread extends Thread {
+    private class HentaidudeDownloadThread implements Runnable {
 
         private URL url;
 
@@ -97,7 +92,7 @@ public class HentaidudeRipper extends AbstractSingleFileRipper {
         public void run() {
             try {
                 Document doc = Http.url(url).get();
-                URL videoSourceUrl = new URL(getVideoUrl(doc));
+                URL videoSourceUrl = new URI(getVideoUrl(doc)).toURL();
                 addURLToDownload(videoSourceUrl, "", "", "", null, getVideoName(), "mp4");
             } catch (Exception e) {
                 LOGGER.error("Could not get video url for " + getVideoName(), e);
