@@ -1,10 +1,14 @@
 package com.rarchives.ripme.ripper.rippers;
 
-import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -15,15 +19,15 @@ import org.json.JSONObject;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
-import org.jsoup.safety.Whitelist;
+import org.jsoup.safety.Safelist;
 import org.jsoup.select.Elements;
 
-import com.rarchives.ripme.ripper.AlbumRipper;
+import com.rarchives.ripme.ripper.AbstractHTMLRipper;
 import com.rarchives.ripme.ui.RipStatusMessage.STATUS;
 import com.rarchives.ripme.utils.Http;
 import com.rarchives.ripme.utils.Utils;
 
-public class ImgurRipper extends AlbumRipper {
+public class ImgurRipper extends AbstractHTMLRipper {
 
     private static final String DOMAIN = "imgur.com",
                                 HOST   = "imgur";
@@ -38,7 +42,6 @@ public class ImgurRipper extends AlbumRipper {
         USER_ALBUM,
         USER_IMAGES,
         SINGLE_IMAGE,
-        SERIES_OF_IMAGES,
         SUBREDDIT
     }
 
@@ -58,6 +61,7 @@ public class ImgurRipper extends AlbumRipper {
         return albumType == ALBUM_TYPE.USER;
     }
 
+    @Override
     public boolean canRip(URL url) {
         if (!url.getHost().endsWith(DOMAIN)) {
            return false;
@@ -71,7 +75,24 @@ public class ImgurRipper extends AlbumRipper {
         return true;
     }
 
-    public URL sanitizeURL(URL url) throws MalformedURLException {
+    @Override
+    protected String getDomain() {
+        return DOMAIN;
+    }
+
+    @Override
+    protected void downloadURL(URL url, int index) {
+        // No-op as we override rip() method
+    }
+
+    @Override
+    protected List<String> getURLsFromPage(Document page) {
+        // No-op as we override rip() method
+        return Arrays.asList();
+    }
+
+    @Override
+    public URL sanitizeURL(URL url) throws MalformedURLException, URISyntaxException {
         String u = url.toExternalForm();
         if (u.indexOf('#') >= 0) {
             u = u.substring(0, u.indexOf('#'));
@@ -79,11 +100,17 @@ public class ImgurRipper extends AlbumRipper {
         u = u.replace("imgur.com/gallery/", "imgur.com/a/");
         u = u.replace("https?://m\\.imgur\\.com", "http://imgur.com");
         u = u.replace("https?://i\\.imgur\\.com", "http://imgur.com");
-        return new URL(u);
+        return new URI(u).toURL();
     }
 
+    @Override
     public String getAlbumTitle(URL url) throws MalformedURLException {
-        String gid = getGID(url);
+        String gid = null;
+        try {
+            gid = getGID(url);
+        } catch (URISyntaxException e) {
+            throw new MalformedURLException(e.getMessage());
+        }
         if (this.albumType == ALBUM_TYPE.ALBUM) {
             try {
                 // Attempt to use album title as GID
@@ -91,7 +118,7 @@ public class ImgurRipper extends AlbumRipper {
                     albumDoc = Http.url(url).get();
                 }
 
-                Elements elems = null;
+                Elements elems;
 
                 /*
                 // TODO: Add config option for including username in album title.
@@ -106,15 +133,13 @@ public class ImgurRipper extends AlbumRipper {
                 }
                 */
 
-                String title = null;
+                String title;
                 final String defaultTitle1 = "Imgur: The most awesome images on the Internet";
                 final String defaultTitle2 = "Imgur: The magic of the Internet";
                 LOGGER.info("Trying to get album title");
                 elems = albumDoc.select("meta[property=og:title]");
-                if (elems != null) {
-                    title = elems.attr("content");
-                    LOGGER.debug("Title is " + title);
-                }
+                title = elems.attr("content");
+                LOGGER.debug("Title is " + title);
                 // This is here encase the album is unnamed, to prevent
                 // Imgur: The most awesome images on the Internet from being added onto the album name
                 if (title.contains(defaultTitle1) || title.contains(defaultTitle2)) {
@@ -124,27 +149,17 @@ public class ImgurRipper extends AlbumRipper {
                     title = "";
                     LOGGER.debug("Trying to use title tag to get title");
                     elems = albumDoc.select("title");
-                    if (elems != null) {
-                        if (elems.text().contains(defaultTitle1) || elems.text().contains(defaultTitle2)) {
-                            LOGGER.debug("Was unable to get album title or album was untitled");
-                        }
-                        else {
-                            title = elems.text();
-                        }
+                    if (elems.text().contains(defaultTitle1) || elems.text().contains(defaultTitle2)) {
+                        LOGGER.debug("Was unable to get album title or album was untitled");
+                    }
+                    else {
+                        title = elems.text();
                     }
                 }
 
                 String albumTitle = "imgur_";
-                /*
-                // TODO: Add config option (see above)
-                if (user != null) {
-                    albumTitle += "user_" + user;
-                }
-                */
                 albumTitle += gid;
-                if (title != null) {
-                    albumTitle += "_" + title;
-                }
+                albumTitle += "_" + title;
 
                 return albumTitle;
             } catch (IOException e) {
@@ -156,118 +171,83 @@ public class ImgurRipper extends AlbumRipper {
 
     @Override
     public void rip() throws IOException {
-        switch (albumType) {
-            case ALBUM:
-                // Fall-through
-            case USER_ALBUM:
-                LOGGER.info("Album type is USER_ALBUM");
-                // Don't call getAlbumTitle(this.url) with this
-                // as it seems to cause the album to be downloaded to a subdir.
-                ripAlbum(this.url);
-                break;
-            case SERIES_OF_IMAGES:
-                LOGGER.info("Album type is SERIES_OF_IMAGES");
-                ripAlbum(this.url);
-                break;
-            case SINGLE_IMAGE:
-                LOGGER.info("Album type is SINGLE_IMAGE");
-                ripSingleImage(this.url);
-                break;
-            case USER:
-                LOGGER.info("Album type is USER");
-                ripUserAccount(url);
-                break;
-            case SUBREDDIT:
-                LOGGER.info("Album type is SUBREDDIT");
-                ripSubreddit(url);
-                break;
-            case USER_IMAGES:
-                LOGGER.info("Album type is USER_IMAGES");
-                ripUserImages(url);
-                break;
+        try {
+            switch (albumType) {
+                case ALBUM:
+                    // Fall-through
+                case USER_ALBUM:
+                    LOGGER.info("Album type is USER_ALBUM");
+                    // Don't call getAlbumTitle(this.url) with this
+                    // as it seems to cause the album to be downloaded to a subdir.
+                    ripAlbum(this.url);
+                    break;
+                case SINGLE_IMAGE:
+                    LOGGER.info("Album type is SINGLE_IMAGE");
+                    ripSingleImage(this.url);
+                    break;
+                case USER:
+                    LOGGER.info("Album type is USER");
+                    ripUserAccount(url);
+                    break;
+                case SUBREDDIT:
+                    LOGGER.info("Album type is SUBREDDIT");
+                    ripSubreddit(url);
+                    break;
+                case USER_IMAGES:
+                    LOGGER.info("Album type is USER_IMAGES");
+                    ripUserImages(url);
+                    break;
+            }
+        } catch (URISyntaxException e) {
+            throw new IOException("Failed ripping " + this.url, e);
         }
         waitForThreads();
     }
 
-    private void ripSingleImage(URL url) throws IOException {
+    private void ripSingleImage(URL url) throws IOException, URISyntaxException {
         String strUrl = url.toExternalForm();
-        Document document = getDocument(strUrl);
-        Matcher m = getEmbeddedJsonMatcher(document);
-        if (m.matches()) {
-            JSONObject json = new JSONObject(m.group(1)).getJSONObject("image");
-            addURLToDownload(extractImageUrlFromJson(json), "");
+        var gid = getGID(url);
+        var json = getSingleImageData(String.format("https://api.imgur.com/post/v1/media/%s?include=media,adconfig,account", gid));
+        var media = json.getJSONArray("media");
+        if (media.length()==0) {
+            throw new IOException(String.format("Failed to fetch image for url %s", strUrl));
+        } 
+        if (media.length()>1) {
+            LOGGER.warn(String.format("Got multiple images for url %s", strUrl));
         }
+        addURLToDownload(extractImageUrlFromJson((JSONObject)media.get(0)), "");
     }
 
-    private void ripAlbum(URL url) throws IOException {
+    private void ripAlbum(URL url) throws IOException, URISyntaxException {
         ripAlbum(url, "");
     }
 
-    private void ripAlbum(URL url, String subdirectory) throws IOException {
-        int index = 0;
+    private void ripAlbum(URL url, String subdirectory) throws IOException, URISyntaxException {
+        int index;
         this.sendUpdate(STATUS.LOADING_RESOURCE, url.toExternalForm());
         index = 0;
         ImgurAlbum album = getImgurAlbum(url);
         for (ImgurImage imgurImage : album.images) {
             stopCheck();
-            String saveAs = workingDir.getCanonicalPath();
-            if (!saveAs.endsWith(File.separator)) {
-                saveAs += File.separator;
-            }
+            Path saveAs = workingDir.toPath();
             if (subdirectory != null && !subdirectory.equals("")) {
-                saveAs += subdirectory;
+                saveAs = saveAs.resolve(subdirectory);
             }
-            if (!saveAs.endsWith(File.separator)) {
-                saveAs += File.separator;
-            }
-            File subdirFile = new File(saveAs);
-            if (!subdirFile.exists()) {
-                subdirFile.mkdirs();
+            if (!Files.exists(saveAs)) {
+                Files.createDirectory(saveAs);
             }
             index += 1;
+            var imgPath = imgurImage.getSaveAs().replaceAll("\\?\\d", "");
             if (Utils.getConfigBoolean("download.save_order", true)) {
-                saveAs += String.format("%03d_", index);
+                saveAs = saveAs.resolve(String.format("%03d_%s", index, imgPath));
+            } else {
+                saveAs = saveAs.resolve(imgPath);
             }
-            saveAs += imgurImage.getSaveAs();
-            saveAs = saveAs.replaceAll("\\?\\d", "");
-            addURLToDownload(imgurImage.url, new File(saveAs));
+            addURLToDownload(imgurImage.url, saveAs);
         }
     }
 
-    public static ImgurAlbum getImgurSeries(URL url) throws IOException {
-        Pattern p = Pattern.compile("^.*imgur\\.com/([a-zA-Z0-9,]*).*$");
-        Matcher m = p.matcher(url.toExternalForm());
-        ImgurAlbum album = new ImgurAlbum(url);
-        if (m.matches()) {
-            String[] imageIds = m.group(1).split(",");
-            for (String imageId : imageIds) {
-                // TODO: Fetch image with ID imageId
-                LOGGER.debug("Fetching image info for ID " + imageId);
-                try {
-                    JSONObject json = Http.url("https://api.imgur.com/2/image/" + imageId + ".json").getJSON();
-                    if (!json.has("image")) {
-                        continue;
-                    }
-                    JSONObject image = json.getJSONObject("image");
-                    if (!image.has("links")) {
-                        continue;
-                    }
-                    JSONObject links = image.getJSONObject("links");
-                    if (!links.has("original")) {
-                        continue;
-                    }
-                    String original = links.getString("original");
-                    ImgurImage theImage = new ImgurImage(new URL(original));
-                    album.addImage(theImage);
-                } catch (Exception e) {
-                    LOGGER.error("Got exception while fetching imgur ID " + imageId, e);
-                }
-            }
-        }
-        return album;
-    }
-
-    public static ImgurAlbum getImgurAlbum(URL url) throws IOException {
+    public static ImgurAlbum getImgurAlbum(URL url) throws IOException, URISyntaxException {
         String strUrl = url.toExternalForm();
         if (!strUrl.contains(",")) {
             strUrl += "/all";
@@ -275,13 +255,11 @@ public class ImgurRipper extends AlbumRipper {
         LOGGER.info("    Retrieving " + strUrl);
         Document doc = getAlbumData("https://api.imgur.com/3/album/" + strUrl.split("/a/")[1]);
         // Try to use embedded JSON to retrieve images
-        LOGGER.info(Jsoup.clean(doc.body().toString(), Whitelist.none()));
-
             try {
-                JSONObject json = new JSONObject(Jsoup.clean(doc.body().toString(), Whitelist.none()));
+                JSONObject json = new JSONObject(Jsoup.clean(doc.body().toString(), Safelist.none()));
                 JSONArray jsonImages = json.getJSONObject("data").getJSONArray("images");
                 return createImgurAlbumFromJsonArray(url, jsonImages);
-            } catch (JSONException e) {
+            } catch (JSONException | URISyntaxException e) {
                 LOGGER.debug("Error while parsing JSON at " + url + ", continuing", e);
             }
 
@@ -309,54 +287,48 @@ public class ImgurRipper extends AlbumRipper {
                 image = "http:" + thumb.select("img").attr("src");
             } else {
                 // Unable to find image in this div
-                LOGGER.error("[!] Unable to find image in div: " + thumb.toString());
+                LOGGER.error("[!] Unable to find image in div: " + thumb);
                 continue;
             }
             if (image.endsWith(".gif") && Utils.getConfigBoolean("prefer.mp4", false)) {
                 image = image.replace(".gif", ".mp4");
             }
-            ImgurImage imgurImage = new ImgurImage(new URL(image));
+            ImgurImage imgurImage = new ImgurImage(new URI(image).toURL());
             imgurAlbum.addImage(imgurImage);
         }
         return imgurAlbum;
     }
 
-    private static Matcher getEmbeddedJsonMatcher(Document doc) {
-        Pattern p = Pattern.compile("^.*widgetFactory.mergeConfig\\('gallery', (.*?)\\);.*$", Pattern.DOTALL);
-        return p.matcher(doc.body().html());
-    }
-
-    private static ImgurAlbum createImgurAlbumFromJsonArray(URL url, JSONArray jsonImages) throws MalformedURLException {
+    private static ImgurAlbum createImgurAlbumFromJsonArray(URL url, JSONArray jsonImages) throws MalformedURLException, URISyntaxException {
         ImgurAlbum imgurAlbum = new ImgurAlbum(url);
         int imagesLength = jsonImages.length();
         for (int i = 0; i < imagesLength; i++) {
             JSONObject ob = jsonImages.getJSONObject(i);
-            imgurAlbum.addImage(new ImgurImage( new URL(ob.getString("link"))));
+            imgurAlbum.addImage(new ImgurImage( new URI(ob.getString("link")).toURL()));
         }
         return imgurAlbum;
     }
 
-    private static ImgurImage createImgurImageFromJson(JSONObject json) throws MalformedURLException {
-        return new ImgurImage(extractImageUrlFromJson(json));
-    }
-
-    private static URL extractImageUrlFromJson(JSONObject json) throws MalformedURLException {
+    private static URL extractImageUrlFromJson(JSONObject json) throws MalformedURLException, URISyntaxException {
         String ext = json.getString("ext");
+        if (!ext.startsWith(".")) {
+            ext = "." + ext;
+        }
         if (ext.equals(".gif") && Utils.getConfigBoolean("prefer.mp4", false)) {
             ext = ".mp4";
         }
-        return  new URL(
-                "http://i.imgur.com/"
-                        + json.getString("hash")
-                        + ext);
+        return  new URI(
+                "https://i.imgur.com/"
+                        + json.getString("id")
+                        + ext).toURL();
     }
 
-    private static Document getDocument(String strUrl) throws IOException {
-        return Jsoup.connect(strUrl)
+    private static JSONObject getSingleImageData(String strUrl) throws IOException {
+        return Http.url(strUrl)
                                 .userAgent(USER_AGENT)
                                 .timeout(10 * 1000)
-                                .maxBodySize(0)
-                                .get();
+                                .header("Authorization", "Client-ID " + Utils.getConfigString("imgur.client_id", "546c25a59c58ad7"))
+                                .getJSON();
     }
 
     private static Document getAlbumData(String strUrl) throws IOException {
@@ -369,35 +341,71 @@ public class ImgurRipper extends AlbumRipper {
                 .get();
     }
 
+    private static JSONObject getUserData(String userUrl) throws IOException {
+        return Http.url(userUrl)
+            .userAgent(USER_AGENT)
+            .timeout(10 * 1000)
+            .header("Authorization", "Client-ID " + Utils.getConfigString("imgur.client_id", "546c25a59c58ad7"))
+            .getJSON();
+    }
+
 
     /**
      * Rips all albums in an imgur user's account.
      * @param url
-     *      URL to imgur user account (http://username.imgur.com)
-     * @throws IOException
+     *      URL to imgur user account (http://username.imgur.com | https://imgur.com/user/username)
      */
-    private void ripUserAccount(URL url) throws IOException {
+    private void ripUserAccount(URL url) throws IOException, URISyntaxException {
+        int cPage = -1, cImage = 0; 
+        String apiUrl = "https://api.imgur.com/3/account/%s/submissions/%d/newest?album_previews=1";
+        // Strip 'user_' from username
+        var username = getGID(url).replace("user_", "");
         LOGGER.info("Retrieving " + url);
         sendUpdate(STATUS.LOADING_RESOURCE, url.toExternalForm());
-        Document doc = Http.url(url).get();
-        for (Element album : doc.select("div.cover a")) {
-            stopCheck();
-            if (!album.hasAttr("href")
-                    || !album.attr("href").contains("imgur.com/a/")) {
-                continue;
+
+        while (true) { 
+            cPage += 1;
+            var pageUrl = String.format(apiUrl, username, cPage);
+            var json = getUserData(pageUrl);
+            var success = json.getBoolean("success");
+            var status = json.getInt("status");
+            if (!success || status!=200) {
+                throw new IOException(String.format("Unexpected status code %d for url %s and page %d", status, url, cPage));
             }
-            String albumID = album.attr("href").substring(album.attr("href").lastIndexOf('/') + 1);
-            URL albumURL = new URL("http:" + album.attr("href") + "/noscript");
-            try {
-                ripAlbum(albumURL, albumID);
-                Thread.sleep(SLEEP_BETWEEN_ALBUMS * 1000);
-            } catch (Exception e) {
-                LOGGER.error("Error while ripping album: " + e.getMessage(), e);
+            var data = json.getJSONArray("data");
+            if (data.isEmpty()) {
+                // Data array is empty for pages beyond the last page
+                break;
+            }
+            for (int i = 0; i < data.length(); i++) {
+                cImage += 1;
+                String prefixOrSubdir = "";
+                if (Utils.getConfigBoolean("download.save_order", true)) {
+                    prefixOrSubdir = String.format("%03d_", cImage);
+                }
+                var d = (JSONObject)data.get(i);
+                var l = d.getString("link");
+                if (d.getBoolean("is_album")) {
+                    // For album links with multiple images create a prefixed folder with album id
+                    prefixOrSubdir += d.getString("id");
+                    ripAlbum(new URI(l).toURL(), prefixOrSubdir);
+                    try {
+                        Thread.sleep(SLEEP_BETWEEN_ALBUMS * 1000L);
+                    } catch (InterruptedException e) {
+                        LOGGER.error(String.format("Error! Interrupted ripping album %s for user account %s", l, username), e);
+                    }
+                } else {
+                    // For direct links 
+                    if (d.has("mp4") && Utils.getConfigBoolean("prefer.mp4", false)) {
+                        l =  d.getString("mp4");
+                    }
+                    addURLToDownload(new URI(l).toURL(), prefixOrSubdir);
+                }
             }
         }
     }
 
-    private void ripUserImages(URL url) throws IOException {
+    private void ripUserImages(URL url) {
         int page = 0; int imagesFound = 0; int imagesTotal = 0;
         String jsonUrl = url.toExternalForm().replace("/all", "/ajax/images");
         if (jsonUrl.contains("#")) {
@@ -417,12 +425,12 @@ public class ImgurRipper extends AlbumRipper {
                 for (int i = 0; i < images.length(); i++) {
                     imagesFound++;
                     JSONObject image = images.getJSONObject(i);
-                    String imageUrl = "http://i.imgur.com/" + image.getString("hash") + image.getString("ext");
+                    String imageUrl = "https://i.imgur.com/" + image.getString("hash") + image.getString("ext");
                     String prefix = "";
                     if (Utils.getConfigBoolean("download.save_order", true)) {
                         prefix = String.format("%03d_", imagesFound);
                     }
-                    addURLToDownload(new URL(imageUrl), prefix);
+                    addURLToDownload(new URI(imageUrl).toURL(), prefix);
                 }
                 if (imagesFound >= imagesTotal) {
                     break;
@@ -435,7 +443,7 @@ public class ImgurRipper extends AlbumRipper {
         }
     }
 
-    private void ripSubreddit(URL url) throws IOException {
+    private void ripSubreddit(URL url) throws IOException, URISyntaxException {
         int page = 0;
         while (true) {
             stopCheck();
@@ -455,7 +463,7 @@ public class ImgurRipper extends AlbumRipper {
                 if (image.contains("b.")) {
                     image = image.replace("b.", ".");
                 }
-                URL imageURL = new URL(image);
+                URL imageURL = new URI(image).toURL();
                 addURLToDownload(imageURL);
             }
             if (imgs.isEmpty()) {
@@ -477,29 +485,30 @@ public class ImgurRipper extends AlbumRipper {
     }
 
     @Override
-    public String getGID(URL url) throws MalformedURLException {
-        Pattern p = null;
-        Matcher m = null;
+    public String getGID(URL url) throws MalformedURLException, URISyntaxException {
+        Pattern p;
+        Matcher m;
 
-        p = Pattern.compile("^https?://(www\\.|m\\.)?imgur\\.com/(a|gallery)/([a-zA-Z0-9]{5,}).*$");
+        p = Pattern.compile("^https?://(?:www\\.|m\\.)?imgur\\.com/gallery/(?:(?:[a-zA-Z0-9]*/)?.*-)?([a-zA-Z0-9]+)$");
         m = p.matcher(url.toExternalForm());
         if (m.matches()) {
             // Imgur album or gallery
             albumType = ALBUM_TYPE.ALBUM;
             String gid = m.group(m.groupCount());
-            this.url = new URL("http://imgur.com/a/" + gid);
+            this.url = new URI("https://imgur.com/a/" + gid).toURL();
             return gid;
         }
-        p = Pattern.compile("^https?://(www\\.|m\\.)?imgur\\.com/(a|gallery|t)/[a-zA-Z0-9]*/([a-zA-Z0-9]{5,}).*$");
+        // Match urls with path /a
+        p = Pattern.compile("^https?://(?:www\\.|m\\.)?imgur\\.com/(?:a|t)/(?:(?:[a-zA-Z0-9]*/)?.*-)?([a-zA-Z0-9]+).*$");
         m = p.matcher(url.toExternalForm());
         if (m.matches()) {
             // Imgur album or gallery
             albumType = ALBUM_TYPE.ALBUM;
             String gid = m.group(m.groupCount());
-            this.url = new URL("http://imgur.com/a/" + gid);
+            this.url = new URI("https://imgur.com/a/" + gid).toURL();
             return gid;
         }
-        p = Pattern.compile("^https?://([a-zA-Z0-9\\-]{3,})\\.imgur\\.com/?$");
+        p = Pattern.compile("^https?://([a-zA-Z0-9\\-]{4,})\\.imgur\\.com/?$");
         m = p.matcher(url.toExternalForm());
         if (m.matches()) {
             // Root imgur account
@@ -507,6 +516,14 @@ public class ImgurRipper extends AlbumRipper {
             if (gid.equals("www")) {
                 throw new MalformedURLException("Cannot rip the www.imgur.com homepage");
             }
+            albumType = ALBUM_TYPE.USER;
+            return "user_" + gid;
+        }
+        // Pattern for new imgur user url https://imgur.com/user/username
+        p = Pattern.compile("^https?://(?:www\\.|m\\.)?imgur\\.com/user/([a-zA-Z0-9]+).*$");
+        m = p.matcher(url.toExternalForm());
+        if (m.matches()) {
+            String gid = m.group(1);
             albumType = ALBUM_TYPE.USER;
             return "user_" + gid;
         }
@@ -529,13 +546,13 @@ public class ImgurRipper extends AlbumRipper {
         if (m.matches()) {
             // Imgur subreddit aggregator
             albumType = ALBUM_TYPE.SUBREDDIT;
-            String album = m.group(2);
+            StringBuilder album = new StringBuilder(m.group(2));
             for (int i = 3; i <= m.groupCount(); i++) {
                 if (m.group(i) != null) {
-                    album += "_" + m.group(i).replace("/", "");
+                    album.append("_").append(m.group(i).replace("/", ""));
                 }
             }
-            return album;
+            return album.toString();
         }
         p = Pattern.compile("^https?://(i\\.|www\\.|m\\.)?imgur\\.com/r/(\\w+)/([a-zA-Z0-9,]{5,}).*$");
         m = p.matcher(url.toExternalForm());
@@ -544,7 +561,7 @@ public class ImgurRipper extends AlbumRipper {
             albumType = ALBUM_TYPE.ALBUM;
             String subreddit = m.group(m.groupCount() - 1);
             String gid = m.group(m.groupCount());
-            this.url = new URL("http://imgur.com/r/" + subreddit + "/" + gid);
+            this.url = new URI("https://imgur.com/r/" + subreddit + "/" + gid).toURL();
             return "r_" + subreddit + "_" + gid;
         }
         p = Pattern.compile("^https?://(i\\.|www\\.|m\\.)?imgur\\.com/([a-zA-Z0-9]{5,})$");
@@ -554,29 +571,14 @@ public class ImgurRipper extends AlbumRipper {
             albumType = ALBUM_TYPE.SINGLE_IMAGE;
             return  m.group(m.groupCount());
         }
-        p = Pattern.compile("^https?://(i\\.|www\\.|m\\.)?imgur\\.com/([a-zA-Z0-9,]{5,}).*$");
-        m = p.matcher(url.toExternalForm());
-        if (m.matches()) {
-            // Series of imgur images
-            albumType = ALBUM_TYPE.SERIES_OF_IMAGES;
-            String gid = m.group(m.groupCount());
-            if (!gid.contains(",")) {
-                throw new MalformedURLException("Imgur image doesn't contain commas");
-            }
-            return gid.replaceAll(",", "-");
-        }
         throw new MalformedURLException("Unsupported imgur URL format: " + url.toExternalForm());
-    }
-
-    public ALBUM_TYPE getAlbumType() {
-        return albumType;
     }
 
     public static class ImgurImage {
         String title = "";
         String description = "";
-        String extension   = "";
-        public URL url = null;
+        String extension;
+        public URL url;
 
         ImgurImage(URL url) {
             this.url = url;
@@ -586,14 +588,7 @@ public class ImgurRipper extends AlbumRipper {
                 this.extension = this.extension.substring(0, this.extension.indexOf("?"));
             }
         }
-        ImgurImage(URL url, String title) {
-            this(url);
-            this.title = title;
-        }
-        public ImgurImage(URL url, String title, String description) {
-            this(url, title);
-            this.description = description;
-        }
+
         String getSaveAs() {
             String saveAs = this.title;
             String u = url.toExternalForm();
@@ -613,7 +608,7 @@ public class ImgurRipper extends AlbumRipper {
 
     public static class ImgurAlbum {
         String title = null;
-        public URL    url = null;
+        public URL    url;
         public List<ImgurImage> images = new ArrayList<>();
         ImgurAlbum(URL url) {
             this.url = url;
