@@ -2,6 +2,8 @@ package com.rarchives.ripme.ripper.rippers;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -13,7 +15,6 @@ import org.jsoup.nodes.Element;
 
 import com.rarchives.ripme.ripper.AbstractHTMLRipper;
 import com.rarchives.ripme.ripper.DownloadThreadPool;
-import com.rarchives.ripme.ui.RipStatusMessage.STATUS;
 import com.rarchives.ripme.utils.Http;
 import com.rarchives.ripme.utils.Utils;
 import org.jsoup.select.Elements;
@@ -59,20 +60,21 @@ public class MotherlessRipper extends AbstractHTMLRipper {
         if (!notHome) {
             StringBuilder newPath = new StringBuilder(path);
             newPath.insert(2, "M");
-            firstURL = new URL(this.url, "https://" + DOMAIN + newPath);
+            firstURL = URI.create("https://" + DOMAIN + newPath).toURL();
             LOGGER.info("Changed URL to " + firstURL);
         }
         return Http.url(firstURL).referrer("https://motherless.com").get();
     }
 
     @Override
-    public Document getNextPage(Document doc) throws IOException {
+    public Document getNextPage(Document doc) throws IOException, URISyntaxException {
+
         Elements nextPageLink = doc.head().select("link[rel=next]");
         if (nextPageLink.isEmpty()) {
             throw new IOException("Last page reached");
         } else {
             String referrerLink = doc.head().select("link[rel=canonical]").first().attr("href");
-            URL nextURL = new URL(this.url, nextPageLink.first().attr("href"));
+            URL nextURL = this.url.toURI().resolve(nextPageLink.first().attr("href")).toURL();
             return Http.url(nextURL).referrer(referrerLink).get();
         }
     }
@@ -81,7 +83,7 @@ public class MotherlessRipper extends AbstractHTMLRipper {
     protected List<String> getURLsFromPage(Document page) {
         List<String> pageURLs = new ArrayList<>();
 
-        for (Element thumb : page.select("div.thumb a.img-container")) {
+        for (Element thumb : page.select("div.thumb-container a.img-container")) {
             if (isStopped()) {
                 break;
             }
@@ -109,7 +111,7 @@ public class MotherlessRipper extends AbstractHTMLRipper {
     @Override
     protected void downloadURL(URL url, int index) {
         // Create thread for finding image at "url" page
-        MotherlessImageThread mit = new MotherlessImageThread(url, index);
+        MotherlessImageRunnable mit = new MotherlessImageRunnable(url, index);
         motherlessThreadPool.addThread(mit);
         try {
             Thread.sleep(IMAGE_SLEEP_TIME);
@@ -148,15 +150,19 @@ public class MotherlessRipper extends AbstractHTMLRipper {
         throw new MalformedURLException("Expected URL format: https://motherless.com/GIXXXXXXX, got: " + url);
     }
 
-
+    @Override
+    protected DownloadThreadPool getThreadPool() {
+        return motherlessThreadPool;
+    }
+    
     /**
      * Helper class to find and download images found on "image" pages
      */
-    private class MotherlessImageThread extends Thread {
-        private URL url;
-        private int index;
+    private class MotherlessImageRunnable implements Runnable {
+        private final URL url;
+        private final int index;
 
-        MotherlessImageThread(URL url, int index) {
+        MotherlessImageRunnable(URL url, int index) {
             super();
             this.url = url;
             this.index = index;
@@ -180,11 +186,11 @@ public class MotherlessRipper extends AbstractHTMLRipper {
                     if (Utils.getConfigBoolean("download.save_order", true)) {
                         prefix = String.format("%03d_", index);
                     }
-                    addURLToDownload(new URL(file), prefix);
+                    addURLToDownload(new URI(file).toURL(), prefix);
                 } else {
                     LOGGER.warn("[!] could not find '__fileurl' at " + url);
                 }
-            } catch (IOException e) {
+            } catch (IOException | URISyntaxException e) {
                 LOGGER.error("[!] Exception while loading/parsing " + this.url, e);
             }
         }
