@@ -1,9 +1,11 @@
 package com.rarchives.ripme.ripper.rippers;
 
-import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
@@ -47,12 +49,12 @@ public class PornhubRipper extends AbstractHTMLRipper {
     }
 
     @Override
-    public Document getNextPage(Document page) throws IOException {
+    public Document getNextPage(Document page) throws IOException, URISyntaxException {
         Elements nextPageLink = page.select("li.page_next > a");
         if (nextPageLink.isEmpty()){
             throw new IOException("No more pages");
         } else {
-            URL nextURL = new URL(this.url, nextPageLink.first().attr("href"));
+            URL nextURL = this.url.toURI().resolve(nextPageLink.first().attr("href")).toURL();
             return Http.url(nextURL).get();
         }
     }
@@ -74,7 +76,7 @@ public class PornhubRipper extends AbstractHTMLRipper {
 
     @Override
     protected void downloadURL(URL url, int index) {
-        PornhubImageThread t = new PornhubImageThread(url, index, this.workingDir);
+        PornhubImageThread t = new PornhubImageThread(url, index, this.workingDir.toPath());
         pornhubThreadPool.addThread(t);
         try {
             Thread.sleep(IMAGE_SLEEP_TIME);
@@ -83,13 +85,13 @@ public class PornhubRipper extends AbstractHTMLRipper {
         }
     }
 
-    public URL sanitizeURL(URL url) throws MalformedURLException {
+    public URL sanitizeURL(URL url) throws MalformedURLException, URISyntaxException {
         // always start on the first page of an album
         // (strip the options after the '?')
         String u = url.toExternalForm();
         if (u.contains("?")) {
             u = u.substring(0, u.indexOf("?"));
-            return new URL(u);
+            return new URI(u).toURL();
         } else {
             return url;
         }
@@ -126,11 +128,11 @@ public class PornhubRipper extends AbstractHTMLRipper {
      *
      * Handles case when site has IP-banned the user.
      */
-    private class PornhubImageThread extends Thread {
-        private URL url;
-        private int index;
+    private class PornhubImageThread implements Runnable {
+        private final URL url;
+        private final int index;
 
-        PornhubImageThread(URL url, int index, File workingDir) {
+        PornhubImageThread(URL url, int index, Path workingDir) {
             super();
             this.url = url;
             this.index = index;
@@ -159,10 +161,10 @@ public class PornhubRipper extends AbstractHTMLRipper {
                     prefix = String.format("%03d_", index);
                 }
 
-                URL imgurl = new URL(url, imgsrc);
+                URL imgurl = url.toURI().resolve(imgsrc).toURL();
                 addURLToDownload(imgurl, prefix);
 
-            } catch (IOException e) {
+            } catch (IOException | URISyntaxException e) {
                 LOGGER.error("[!] Exception while loading/parsing " + this.url, e);
             }
         }
