@@ -1,23 +1,27 @@
 package com.rarchives.ripme.tst;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import com.rarchives.ripme.utils.Proxy;
 import com.rarchives.ripme.utils.Utils;
-import junit.framework.TestCase;
 import com.rarchives.ripme.utils.Http;
+import org.junit.jupiter.api.Test;
 
+import static org.junit.jupiter.api.Assertions.assertFalse;
 
-public class proxyTest  extends TestCase {
+public class proxyTest  {
 
 
     // This test will only run on machines where the user has added a entry for proxy.socks
-    public void testSocksProxy() throws IOException {
+    @Test
+    public void testSocksProxy() throws IOException, URISyntaxException {
         // Unset proxy before testing
         System.setProperty("http.proxyHost", "");
         System.setProperty("https.proxyHost", "");
         System.setProperty("socksProxyHost", "");
-        URL url = new URL("https://icanhazip.com");
+        URL url = new URI("https://icanhazip.com").toURL();
         String proxyConfig = Utils.getConfigString("proxy.socks", "");
         if (!proxyConfig.equals("")) {
             String ip1 = Http.url(url).ignoreContentType().get().text();
@@ -31,12 +35,13 @@ public class proxyTest  extends TestCase {
     }
 
     // This test will only run on machines where the user has added a entry for proxy.http
-    public void testHTTPProxy() throws IOException {
+    @Test
+    public void testHTTPProxy() throws IOException, URISyntaxException {
         // Unset proxy before testing
         System.setProperty("http.proxyHost", "");
         System.setProperty("https.proxyHost", "");
         System.setProperty("socksProxyHost", "");
-        URL url = new URL("https://icanhazip.com");
+        URL url = new URI("https://icanhazip.com").toURL();
         String proxyConfig = Utils.getConfigString("proxy.http", "");
         if (!proxyConfig.equals("")) {
             String ip1 = Http.url(url).ignoreContentType().get().text();
