@@ -1,25 +1,26 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
 
 import com.rarchives.ripme.ripper.rippers.ImagefapRipper;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 public class ImagefapRipperTest extends RippersTest {
     @Test
-    public void testImagefapAlbums() throws IOException {
+    @Tag("flaky")
+    public void testImagefapAlbums() throws IOException, URISyntaxException {
         Map<URL, String> testURLs = new HashMap<>();
 
         // Album with specific title
-        testURLs.put(new URL("http://www.imagefap.com/pictures/4649440/Frozen-%28Elsa-and-Anna%29?view=2"),
-                             "Frozen (Elsa and Anna)");
-
-        // New URL format
-        testURLs.put(new URL("http://www.imagefap.com/gallery.php?pgid=fffd68f659befa5535cf78f014e348f1"),
-                             "imagefap_fffd68f659befa5535cf78f014e348f1");
+        testURLs.put(new URI("https://www.imagefap.com/pictures/11365460/Cartoons").toURL(),
+                             "Cartoons");
 
         for (URL url : testURLs.keySet()) {
             ImagefapRipper ripper = new ImagefapRipper(url);
@@ -27,9 +28,10 @@ public class ImagefapRipperTest extends RippersTest {
         }
     }
     @Test
-    public void testImagefapGetAlbumTitle() throws IOException {
-        URL url = new URL("https://www.imagefap.com/gallery.php?gid=7789753");
+    @Tag("flaky")
+    public void testImagefapGetAlbumTitle() throws IOException, URISyntaxException {
+        URL url = new URI("https://www.imagefap.com/pictures/11365460/Cartoons").toURL();
         ImagefapRipper ripper = new ImagefapRipper(url);
-        assertEquals("imagefap_Red.Heels.Lover.In.Love_7789753", ripper.getAlbumTitle(url));
+        Assertions.assertEquals("imagefap_Cartoons_11365460", ripper.getAlbumTitle(url));
     }
 }
