@@ -1,28 +1,43 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+
 import com.rarchives.ripme.ripper.rippers.ListalRipper;
+import org.junit.jupiter.api.*;
 
 public class ListalRipperTest extends RippersTest {
 
     /**
      * Test for list type url.
-     * @throws IOException
      */
-    public void testRipListType() throws IOException {
+    @Test
+    @Tag("flaky")
+    public void testPictures() throws IOException, URISyntaxException {
         ListalRipper ripper =
-                new ListalRipper(new URL("https://www.listal.com/list/evolution-emma-stone"));
+                new ListalRipper(new URI("https://www.listal.com/emma-stone_iii/pictures").toURL());
+        testRipper(ripper);
+    }
+
+    /**
+     * Test for list type url.
+     */
+    @Test
+    @Tag("flaky")
+    public void testRipListType() throws IOException, URISyntaxException {
+        ListalRipper ripper =
+                new ListalRipper(new URI("https://www.listal.com/list/evolution-emma-stone").toURL());
         testRipper(ripper);
     }
 
     /**
      * Test for folder type url.
-     * @throws IOException
      */
-    public void testRipFolderType() throws IOException {
+    @Test
+    public void testRipFolderType() throws IOException, URISyntaxException {
         ListalRipper ripper =
-                new ListalRipper(new URL("https://www.listal.com/chet-atkins/pictures"));
+                new ListalRipper(new URI("https://www.listal.com/chet-atkins/pictures").toURL());
         testRipper(ripper);
     }
 
