@@ -1,10 +1,12 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.ModelmayhemRipper;
 
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
@@ -12,16 +14,16 @@ public class ModelmayhemRipperTest extends RippersTest {
 
     @Test
     @Disabled("Broken ripper")
-    public void testModelmayhemRip() throws IOException {
+    public void testModelmayhemRip() throws IOException, URISyntaxException {
         ModelmayhemRipper ripper = new ModelmayhemRipper(
-                new URL("https://www.modelmayhem.com/portfolio/520206/viewall"));
+                new URI("https://www.modelmayhem.com/portfolio/520206/viewall").toURL());
         testRipper(ripper);
     }
 
     @Test
-    public void testGetGID() throws IOException {
+    public void testGetGID() throws IOException, URISyntaxException {
         ModelmayhemRipper ripper = new ModelmayhemRipper(
-                new URL("https://www.modelmayhem.com/portfolio/520206/viewall"));
-        assertEquals("520206", ripper.getGID(new URL("https://www.modelmayhem.com/portfolio/520206/viewall")));
+                new URI("https://www.modelmayhem.com/portfolio/520206/viewall").toURL());
+        Assertions.assertEquals("520206", ripper.getGID(new URI("https://www.modelmayhem.com/portfolio/520206/viewall").toURL()));
     }
 }
