@@ -1,7 +1,8 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 import com.rarchives.ripme.ripper.rippers.OglafRipper;
 
@@ -9,8 +10,8 @@ import org.junit.jupiter.api.Test;
 
 public class OglafRipperTest extends RippersTest {
     @Test
-    public void testRip() throws IOException {
-        OglafRipper ripper = new OglafRipper(new URL("http://oglaf.com/plumes/"));
+    public void testRip() throws IOException, URISyntaxException {
+        OglafRipper ripper = new OglafRipper(new URI("http://oglaf.com/plumes/").toURL());
         testRipper(ripper);
     }
 }
