@@ -1,21 +1,27 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.TeenplanetRipper;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 public class TeenplanetRipperTest extends RippersTest {
     @Test
-    public void testTeenplanetRip() throws IOException {
-        TeenplanetRipper ripper = new TeenplanetRipper(new URL("http://teenplanet.org/galleries/the-perfect-side-of-me-6588.html"));
+    @Tag("flaky")
+    public void testTeenplanetRip() throws IOException, URISyntaxException {
+        TeenplanetRipper ripper = new TeenplanetRipper(new URI("http://teenplanet.org/galleries/the-perfect-side-of-me-6588.html").toURL());
         testRipper(ripper);
     }
 
-    public void testGetGID() throws IOException {
-        URL url = new URL("http://teenplanet.org/galleries/the-perfect-side-of-me-6588.html");
+    @Test
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("http://teenplanet.org/galleries/the-perfect-side-of-me-6588.html").toURL();
         TeenplanetRipper ripper = new TeenplanetRipper(url);
-        assertEquals("the-perfect-side-of-me-6588", ripper.getGID(url));
+        Assertions.assertEquals("the-perfect-side-of-me-6588", ripper.getGID(url));
     }
 }
