@@ -1,22 +1,26 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.VidbleRipper;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 public class VidbleRipperTest extends RippersTest {
     @Test
-    public void testVidbleRip() throws IOException {
-        VidbleRipper ripper = new VidbleRipper(new URL("http://www.vidble.com/album/y1oyh3zd"));
+    public void testVidbleRip() throws IOException, URISyntaxException {
+        VidbleRipper ripper = new VidbleRipper(new URI("https://vidble.com/album/cGEFr8zi").toURL());
         testRipper(ripper);
     }
 
-    public void testGetGID() throws IOException {
-        URL url = new URL("http://www.vidble.com/album/y1oyh3zd");
+    @Test
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("https://vidble.com/album/cGEFr8zi").toURL();
         VidbleRipper ripper = new VidbleRipper(url);
-        assertEquals("y1oyh3zd", ripper.getGID(url));
+        Assertions.assertEquals("cGEFr8zi", ripper.getGID(url));
     }
 }
 
